--- a/src/App.css
+++ b/src/App.css
@@ -11,17 +11,36 @@
   align-items: center;
   min-height: 100vh;
   background-color: rgb(45, 11, 32);
+  flex-direction: column;
 }
 
 .clock-container .clock {
+  display: flex;
+  justify-content: center;
   background-color: rgb(250, 255, 227);
   padding: 2em 5em;
   border-radius: 10px;
   box-shadow: 0px 15px 61px 0px rgba(0,0,0,0.75);
+  max-width: 40%;
+  text-align: center;
 }
 
 .clock-container .clock h1 {
   font-size: 8rem;
   color: white;
   -webkit-text-stroke: 2px black;
+}
+
+footer a {
+  color: white;
+  text-decoration: none;
+  font-weight: 600;
+  position: absolute;
+  left: 43%;
+  top: 90%;
+}
+
+footer a:hover {
+  filter: brightness(.8);
+  transition: .3s;
 }
